src/test/ui/consts/const-eval/const-eval-overflow-4b.stderr
error[E0369]: cannot add `u8` to `i8`
  --> $DIR/const-eval-overflow-4b.rs:9:28
   |
LL |     : [u32; (i8::MAX as i8 + 1u8) as usize]
   |              ------------- ^ --- u8
   |              |
   |              i8
   |
help: change the type of the numeric literal from `u8` to `i8`
   |
LL |     : [u32; (i8::MAX as i8 + 1i8) as usize]
   |                               ~~

error[E0604]: only `u8` can be cast as `char`, not `i8`
  --> $DIR/const-eval-overflow-4b.rs:20:13
   |
LL |     : [u32; 5i8 as char as usize]
   |             ^^^^^^^^^^^ invalid cast

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0369, E0604.
For more information about an error, try `rustc --explain E0369`.
